src/components/toggle.module.css
.toggle-btn {
  width: 56px;
  height: 56px;
  font-size: 36px;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  background: #f4f4f4;
  box-shadow: 0px 2px 7px 3px rgba(0, 0, 0, 0.33);
  color: skyblue;
  border-radius: 50%;
  border: none;
  overflow: hidden;
}

@media (min-width: 769px) {
  .toggle-btn {
    display: none;
  }
}

